--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    api 'com.hendiware.utils:futils:1.6.91'
 }
