--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
     api 'com.hendiware.utils:futils:1.6.91'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 }
